--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8">
     <title>Climb Higher</title>
-    <link href="climb.css" rel="stylesheet" />
+    <link href="styles.css" rel="stylesheet" />
   </head>
   <body style="background-color:#404040;">
         <center><h1 style="color:#F2762E;">Climb Higher</h1></center>
@@ -13,9 +13,9 @@
   </div>
   <div class="text-col">
     <p style="color:white">
-        <b>text will go here make sure to return or else will continue right forever</b>
+        <b>A smarter way to climb higher</b>
     </p>
-    <video width="500" height="500" controls="controls autoplay"> <!-- video is on the mac -->
+    <video width="700" height="700" controls="controls autoplay">
       <source src="ClimbHigherJenna.mp4" type="video/mp4">
   </div>
 </div>
