--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8">
     <title>Climb Higher</title>
-    <link href="climb.css" rel="stylesheet" />
+    <link href="styles.css" rel="stylesheet" />
   </head>
   <body style="background-color:#404040;">
         <center><h1 style="color:#F2762E;">Climb Higher</h1></center>
