--- a/index.html
+++ b/index.html
@@ -3,17 +3,22 @@
   <head>
     <meta charset="UTF-8">
     <title>Climb Higher</title>
-    <link href="climb.css" rel="stylesheet" />
+    <link href="styles.css" rel="stylesheet" />
   </head>
   <body style="background-color:#404040;">
         <center><h1 style="color:#F2762E;">Climb Higher</h1></center>
 <div class="container">
   <div class="img-col">
-    <img src="https://mail.google.com/mail/u/0?ui=2&ik=6d5062cb70&attid=0.1&permmsgid=msg-f:1742157942494022786&th=182d636b18fb4c82&view=att&disp=safe&realattid=f_l79d6mit0" alt="Product Picture">
+    <img src="climbhigher.jpeg" alt="Product Picture">
+    <div class="textbelowimg">
+      <p>you can either add text, img, video, here</p>
+    </div>
   </div>
   <div class="text-col">
-    <p style="color:white">
-        <b>A smarter way to climb higher</b>
+    <p>
+        <b>Here is an example of the text please</b><br> <br>
+        <b>be sure to let me know what you want </b><br><br>
+        <b>written here!!</b>
     </p>
     <video width="700" height="700" controls="controls autoplay">
       <source src="ClimbHigherJenna.mp4" type="video/mp4">
