--- a/index.html
+++ b/index.html
@@ -1,28 +1,27 @@
 <!DOCTYPE html>
-<html>
-  <head>
+<html lang="en">
+<head>
     <meta charset="UTF-8">
     <title>Climb Higher</title>
-    <link href="climb.css" rel="stylesheet" />
-  </head>
-  <body style="background-color:#404040;">
-        <center><h1 style="color:#F2762E;">Climb Higher</h1></center>
-<div class="container">
-  <div class="img-col">
-    <img src="climbhigher.jpeg" alt="Product Picture">
-    <div class="textbelowimg">
-      <p>you can either add text, img, video, here</p>
+    <link rel="stylesheet" href="styles.css">
+</head>
+<body>
+    <div class="top-container">
+        <h1>Climb Higher</h1>
+        <h5>by Josh Headlee</h5>
     </div>
-  </div>
-  <div class="text-col">
-    <p>
-        <b>Here is an example of the text please</b><br> <br>
-        <b>be sure to let me know what you want </b><br><br>
-        <b>written here!!</b>
-    </p>
-    <video width="700" height="700" controls="controls autoplay">
-      <source src="ClimbHigherJenna.mp4" type="video/mp4">
-  </div>
-</div>
-  </body>
+
+    <div class="left-container">
+        <img class="product-img" src="climbhigher.jpeg" alt="product-img">
+        <p class="product-description">This is where you can place product information ehwjehqwe qweh qwehqw ehqw ehjqwehqjkwehqje qhje qjkhe qwjehqjwe qehjkqwhe qjkweh qwehkjq weqkjw ehqkwje qjkwe qe fjkwqeckwqac qwcqwj fklwqjkc qwjxq wkdcjqlwc qwch 2eoch 2caj icjkqls cj1c w1jckajw1c1 ocw ijcioi 1wcj w1c 1nwkcnnj 1kcwo1c w1cno 1wc o1wcnw1c 1icj wi1ocnjks ccj o1jwo cw1i ocw1ic jsnj ckqscno1 cow1scj w1o</p>
+    </div>
+
+    <div class="right-container">
+        <video class="product-video" src="ClimbHigherJenna.mp4" controls="controls autoplay"></video>
+    </div>
+
+    <div class="video-description">
+        <p class="video-description">hello test you can put other text hear I will leave all words up to you sir.. you can fill up full height of video on right and should look like this askdas dhjqwasd hqwdh qwhd qshds jkdhasjkd hasjkdhasjk dhasjkdh asdhwajdh 23wqd hwas fhwasdh lefhla efhqejsd hgd ajfgjhafg qehf 3e-qwfh weqefhqfhwkejc qwejfb sadch wpesuchw eDSCHWSPDCH PWEUCH W    EPFHWE FHI QWEHFW HEF</p>
+    </div>
+</body>
 </html>
